--- a/bram.html
+++ b/bram.html
@@ -95,7 +95,10 @@ title: Dr. Bram Adams
 
         <h1><a name="award">Awards</a></h1>
         <p>
-        <ul>
+          <ul>
+            <li>Distinguished Paper Award at <a href="https://arxiv.org/abs/2305.09824">ICSE 2024's SEIP track</a>.</li>
+            <li>Best Paper Award at <a href="https://arxiv.org/abs/2403.17214">FORGE 2024</a>.</li>
+            <li>Distinguished reviewer award at <a href="https://conf.researchr.org/home/msr-2024">MSR 2024</a>.</li>
             <li>Distinguished reviewer award at <a href="http://www.ieee-scam.org/2021/">SCAM 2021</a>.</li>
             <li><a href="https://2021.msrconf.org/track/msr-2021-msr-awards?#Call-for-Nominations-">MSR 2021
                     Foundational Contribution Award</a> for his research and evangelization on release engineering (<a
@@ -135,7 +138,9 @@ title: Dr. Bram Adams
 
         <h3>Chair:</h3>
         <p>
-        <ul>
+          <ul>
+            <li>general chair of the <a href="https://conf.researchr.org/home/msr-2025">21st International Conference on Mining
+                    Software Repositories (MSR)</a>, April 28-29, 2025 (Ottawa, ON)</li>
             <li>most influential paper co-chair (together with <a
                     href="https://sites.google.com/view/juergenrilling/home">Juergen
                     Rilling</a>) of the <a href="https://www.ieee-scam.org/2023/">23rd IEEE International Working
