--- a/publications.html
+++ b/publications.html
@@ -86,8 +86,11 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
-        <li>EBRAHIMI, E., ADAMS, B., OLIVA, G.A. and HASSAN, A.E. (2024). <a
-                href="https://sail.cs.queensu.ca/data/pdfs/2024_A_Large-Scale_Exploratory_Study_on_the_Proxy_Pattern_in_Ethereum.pdf">A
+                <li>PATEL, H., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_harsh.pdf">Post Deployment Recycling
+                        of Machine Learning Models - Don't Throw Away Your Old Models!</a>, Empirical Software
+                    Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_harsh.bib"><i>BibTeX</i></a></li>
+                <li>EBRAHIMI, E., ADAMS, B., OLIVA, G.A. and HASSAN, A.E. (2024). <a
+                        href="https://sail.cs.queensu.ca/data/pdfs/2024_A_Large-Scale_Exploratory_Study_on_the_Proxy_Pattern_in_Ethereum.pdf">A
                 Large-Scale Exploratory Study on the Proxy Pattern in Ethereum</a>, Empirical Software
             Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_amir_proxy.bib"><i>BibTeX</i></a></li>
         <li>ZHAO, Z., CHEN, Y., BANGASH, A.A., ADAMS, B. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2402.15990">An
@@ -129,12 +132,13 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             ratio: 121/483=25.1%)&nbsp;<a href="publications/2024/fse.bib"><i>BibTeX</i></a>
         </li>
         <li>
-                OLEWICKI, D., HABCHI, S., NAYROLLES, M., FARAMARZI, M., CHANDAR, S. and ADAMS, B. (2024). <a
-                    href="https://arxiv.org/abs/2305.09824">Towards Lifelong Learning for Software Analytics Models: Empirical Study
-                    on Brown Build and Risk Prediction</a>, in Proceedings of the Software Engineering In Practice (SEIP) track at
-                the 46th
-                International Conference on Software Engineering, ICSE (Lisbon, Portugal), to appear. (Acceptance
-                ratio: 45/120=37.5%)&nbsp;<a href="publications/2024/seip.bib"><i>BibTeX</i></a>
+            OLEWICKI, D., HABCHI, S., NAYROLLES, M., FARAMARZI, M., CHANDAR, S. and ADAMS, B. (2024). <a
+                href="https://arxiv.org/abs/2305.09824">Towards Lifelong Learning for Software Analytics Models: Empirical Study
+                on Brown Build and Risk Prediction</a>, in Proceedings of the Software Engineering In Practice (SEIP) track at
+            the 46th
+            International Conference on Software Engineering, ICSE (Lisbon, Portugal), to appear. (Acceptance
+            ratio: 45/120=37.5%)&nbsp;<span style="color: black; font-weight: bold">(Distinguished Paper
+                Award)</span><a href="publications/2024/seip.bib"><i>BibTeX</i></a>
             </li>
             <li>MACEDO, M., TIAN, Y., COGO, F. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2403.17214">Exploring the Impact
                     of the Output Format on
