Updating the title.

--- a/publications.html
+++ b/publications.html
@@ -127,7 +127,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <ul>
         <li>
             OLEWICKI, D., HABCHI, S. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2404.10703">An empirical study on code
-                review activity prediction in practice</a>, in Proceedings of the ACM
+                review activity prediction and its impact in practice</a>, in Proceedings of the ACM
             on Software Engineering (PACMSE), Issue FSE 2024 (Porto de Galinhas, Brazil), to appear. (Acceptance
             ratio: 121/483=25.1%)&nbsp;<a href="publications/2024/fse.bib"><i>BibTeX</i></a>
         </li>
