Shenyu's paper + correct replication URL Akshat.

--- a/publications.html
+++ b/publications.html
@@ -86,6 +86,9 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
+                <li>ZHENG, S., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_shenyu.pdf">Does Using Bazel Help
+                        Speed Up Continuous Integration Builds?</a>, Empirical Software
+                    Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_shenyu.bib"><i>BibTeX</i></a></li>
                 <li>PATEL, H., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_harsh.pdf">Post Deployment Recycling
                         of Machine Learning Models - Don't Throw Away Your Old Models!</a>, Empirical Software
                     Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_harsh.bib"><i>BibTeX</i></a></li>
