--- a/bram.html
+++ b/bram.html
@@ -99,6 +99,7 @@ title: Dr. Bram Adams
             <li>Distinguished Paper Award at <a href="https://arxiv.org/abs/2305.09824">ICSE 2024's SEIP track</a>.</li>
             <li>Best Paper Award at <a href="https://arxiv.org/abs/2403.17214">FORGE 2024</a>.</li>
             <li>Distinguished reviewer award at <a href="https://conf.researchr.org/home/msr-2024">MSR 2024</a>.</li>
+            <li>Distinguished reviewer award at <a href="https://conf.researchr.org/home/fse-2023">FSE 2023</a>.</li>
             <li>Distinguished reviewer award at <a href="http://www.ieee-scam.org/2021/">SCAM 2021</a>.</li>
             <li><a href="https://2021.msrconf.org/track/msr-2021-msr-awards?#Call-for-Nominations-">MSR 2021
                     Foundational Contribution Award</a> for his research and evangelization on release engineering (<a
@@ -140,9 +141,12 @@ title: Dr. Bram Adams
         <p>
           <ul>
             <li>general chair of the <a href="https://conf.researchr.org/home/msr-2025">21st International Conference on Mining
-                    Software Repositories (MSR)</a>, April 28-29, 2025 (Ottawa, ON)</li>
-            <li>most influential paper co-chair (together with <a
-                    href="https://sites.google.com/view/juergenrilling/home">Juergen
+              Software Repositories (MSR)</a>, April 28-29, 2025 (Ottawa, ON)</li>
+            <li>most influential paper co-chair (together with <a href="https://www.win.tue.nl/~aserebre/">Alexander Serebrenik</a>)
+                of the <a href="https://conf.researchr.org/home/saner-2025">32nd IEEE International
+                    Conference on
+                    Software Analysis, Evolution, and Reengineering (SANER)</a>, March 4-7, 2025 (Montreal, QC)</li>
+            <li>most influential paper co-chair (together with <a href="https://sites.google.com/view/juergenrilling/home">Juergen
                     Rilling</a>) of the <a href="https://www.ieee-scam.org/2023/">23rd IEEE International Working
                     Conference on
                     Source Code Analysis and Manipulation (SCAM)</a>, October 2-3, 2023 (Bogot&aacute;, Colombia)</li>
@@ -234,7 +238,10 @@ title: Dr. Bram Adams
 
         <h3>Co-organizer:</h3>
         <p>
-        <ul>
+          <ul>
+            <li><a href="https://2024.aiwareconf.org/">1st ACM International Conference on AI-powered Software (AIware)</a>, July 15-16, 2024 (Porto de Galinhas, Brazil)</li>
+            <li><a href="https://www.cser.ca/2024s/">Consortium for Software Engineering Research (CSER) Spring 2024
+                    Meeting</a>, June 10-11, 2024 (Kingston, ON)</li>
             <li><a href="https://fmse.io">FM+SE Vision 2030</a>, November 16-19, 2023 (Mexico City, Mexico)</li>
             <li><a href="https://fmse.io/school/">FM+SE School</a>, November 16-17, 2023 (Mexico City, Mexico)</li>
             <li><a href="https://soheal.github.io">2nd International Workshop on Software Health (SoHeal)</a>, May 28,
@@ -285,7 +292,14 @@ title: Dr. Bram Adams
 
         <h3>PC Member</h3>
         <p>
-        <ul>
+          <ul>
+            <li><a href="https://conf.researchr.org/track/icsme-2024/icsme-2024-doctoral-symposium-track">Doctoral Symposium</a>
+                track of the <a href="https://conf.researchr.org/home/icsme-2024">40th IEEE International Conference on Software
+                    Maintenance and
+                    Evolution (ICSME)</a>, October 6-11, 2024</li>
+            <li><a href="https://llm4code.github.io/">1st International Workshop on Large Language Models for Code (LLM4Code
+                    2024)</a>, April 20, 2024, co-located with <a href="https://conf.researchr.org/home/icse-2024">ICSE 2024</a>
+            </li>
             <li><a href="https://conf.researchr.org/home/msr-2024">21st Working Conf. on Mining Software
                     Repositories (MSR)</a>, April
                 15-16, 2024 (Lisbon, Portugal)</li>
@@ -676,7 +690,10 @@ title: Dr. Bram Adams
 
         <h3>Other:</h3>
         <p>
-        <ul>
+          <ul>
+            <li><a href="https://ivado.ca/en/">IVADO</a> researcher</li>
+            <li>Associate editor of the <a href="https://www.computer.org/csdl/journal/ts">IEEE Transactions on Software Engineering
+                    (TSE)</a></li>
             <li>Member of the editorial board of the <a href="https://link.springer.com/journal/10664">Journal on
                     Empirical Software Engineering (EMSE)</a></li>
             <li>Member of the editorial board of the <a
