--- a/publications.html
+++ b/publications.html
@@ -86,9 +86,11 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
-                <li>ZHENG, S., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_shenyu.pdf">Does Using Bazel Help
-                        Speed Up Continuous Integration Builds?</a>, Empirical Software
-                    Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_shenyu.bib"><i>BibTeX</i></a></li>
+        <li>OUATITI, Y.E., SAYAGH, M., KERZAZI, N., ADAMS, B. and HASSAN, A.E. (2024). <a
+                href="https://sail.cs.queensu.ca/data/pdfs/2024_The_Impact_of_Concept_Drift_and_Data_leakage_on_Log_Level_Prediction_Models.pdf">The
+                impact of Concept drift and Data leakage on Log Level Prediction
+                Models</a>, Empirical Software
+                    Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_youssef.bib"><i>BibTeX</i></a></li>
                 <li>PATEL, H., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_harsh.pdf">Post Deployment Recycling
                         of Machine Learning Models - Don't Throw Away Your Old Models!</a>, Empirical Software
                     Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_harsh.bib"><i>BibTeX</i></a></li>
