--- a/bram.html
+++ b/bram.html
@@ -146,6 +146,9 @@ title: Dr. Bram Adams
                 of the <a href="https://conf.researchr.org/home/saner-2025">32nd IEEE International
                     Conference on
                     Software Analysis, Evolution, and Reengineering (SANER)</a>, March 4-7, 2025 (Montreal, QC)</li>
+            <li>general co-chair of the <a href="https://2024.aiwareconf.org/">1st ACM International Conference on AI-powered Software (AIware)</a>, July
+                15-16, 2024 (Porto de Galinhas, Brazil)</li>
+            
             <li>most influential paper co-chair (together with <a href="https://sites.google.com/view/juergenrilling/home">Juergen
                     Rilling</a>) of the <a href="https://www.ieee-scam.org/2023/">23rd IEEE International Working
                     Conference on
@@ -239,7 +242,6 @@ title: Dr. Bram Adams
         <h3>Co-organizer:</h3>
         <p>
           <ul>
-            <li><a href="https://2024.aiwareconf.org/">1st ACM International Conference on AI-powered Software (AIware)</a>, July 15-16, 2024 (Porto de Galinhas, Brazil)</li>
             <li><a href="https://www.cser.ca/2024s/">Consortium for Software Engineering Research (CSER) Spring 2024
                     Meeting</a>, June 10-11, 2024 (Kingston, ON)</li>
             <li><a href="https://fmse.io">FM+SE Vision 2030</a>, November 16-19, 2023 (Mexico City, Mexico)</li>
