--- a/bram.html
+++ b/bram.html
@@ -704,14 +704,14 @@ title: Dr. Bram Adams
             <li>Former associate editor of the <a
                     href="https://www.journals.elsevier.com/journal-of-systems-and-software/">Journal of Systems and
                     Software (JSS)</a></li>
-            <li>Member of the steering committee of the <a href="http://msrconf.org/">International Conference on Mining
-                    Software Repositories (MSR)</a></li>
+            <li>Former member of the steering committee of the <a href="http://msrconf.org/">International Conference on Mining
+                    Software Repositories (MSR)</a>, 2016-2024</li>
             <li>Former member of the steering committee of the <a href="http://saner.aau.at/">IEEE International
-                    Conference on Software Analysis, Evolution and Reengineering (SANER)</a>, 2015-2017</li>
+                    Conference on Software Analysis, Evolution and Reengineering (SANER)</a>, 2015-2018</li>
             <li>Member of the steering committee of the <a href="http://releng.polymtl.ca">International Workshop on
                     Release Engineering (RELENG)</a></li>
-            <li>Member of the steering committee of the <a href="http://sback.it/mud2014/">International Workshop on
-                    Mining Unstructured Data (MUD)</a></li>
+            <li>Former member of the steering committee of the <a href="http://sback.it/mud2014/">International Workshop on
+                    Mining Unstructured Data (MUD)</a>, 2010-2015</li>
             <li>Panel member at the <a href="http://www.cs.wm.edu/icsm2011/?page_id=291">mid-career doctoral
                     symposium</a> of the <a href="http://www.cs.wm.edu/icsm2011/">27th IEEE Intl. Conf. on Software
                     Maintenance (ICSM)</a>, September 25-30, 2011 (Williamsburg, VA, US)</li>
