--- a/bram.html
+++ b/bram.html
@@ -720,9 +720,11 @@ title: Dr. Bram Adams
 
         <h1><a name="invited">Invited Talks:</a></h1>
         <p>
-        <ul>
-            <li>Release Engineering in the AI World: How can Analytics Help?, Invited talk at the <a
-                    href="http://informatique.umons.ac.be/">Institut
+          <ul>
+            <li>Release Engineering in the AI World, Invited talk at the <a href="https://soft.vub.ac.be/soft/">Software Languages
+                    lab</a>, Vrije Universiteit Brussel (Belgium), October 30, 2023.</li>
+                        <li>Release Engineering in the AI World: How can Analytics Help?, Invited talk at the <a
+                                href="http://informatique.umons.ac.be/">Institut
                     d'Informatique</a>, Universit&eacute; de Mons (Belgium), May 8, 2023.</li>
             <li>Release Engineering in the AI World: How can Analytics Help?,
                 Keynote at the <a href="https://promiseconf.github.io/2022/">18th International Conference on Predictive
