--- a/publications.html
+++ b/publications.html
@@ -138,7 +138,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         </li>
         <li>
             OLEWICKI, D., HABCHI, S., NAYROLLES, M., FARAMARZI, M., CHANDAR, S. and ADAMS, B. (2024). <a
-                href="https://arxiv.org/abs/2305.09824">Towards Lifelong Learning for Software Analytics Models: Empirical Study
+                href="https://arxiv.org/abs/2305.09824">On the Costs and Benefits of Adopting Lifelong Learning for Software
+                Analytics: Empirical Study
                 on Brown Build and Risk Prediction</a>, in Proceedings of the Software Engineering In Practice (SEIP) track at
             the 46th
             International Conference on Software Engineering, ICSE (Lisbon, Portugal), to appear. (Acceptance
