--- a/publications.html
+++ b/publications.html
@@ -86,6 +86,12 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
+        <li>
+            PATEL, H., BOUCHER, D., FALLAHZADEH, E., HASSAN, A.E. and ADAMS, B. (2024). <a
+                href="publications/2024/ieeesw-harsh.pdf">A State-of-the-practice Release-readiness
+                Checklist for Generative AI-based Software Products</a>, IEEE Software, IEEE,
+            to appear.&nbsp;<a href="publications/2024/ieeesw-harsh.bib"><i>BibTeX</i></a>
+        </li>
         <li>OUATITI, Y.E., SAYAGH, M., KERZAZI, N., ADAMS, B. and HASSAN, A.E. (2024). <a
                 href="https://sail.cs.queensu.ca/data/pdfs/2024_The_Impact_of_Concept_Drift_and_Data_leakage_on_Log_Level_Prediction_Models.pdf">The
                 impact of Concept drift and Data leakage on Log Level Prediction
