Fixing stale URLs.

--- a/publications.html
+++ b/publications.html
@@ -262,7 +262,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                 Elsevier.&nbsp;<a href="publications/2022/jss_parisa.bib"><i>BibTeX</i></a></li>
             </li>
             <li>MUJAHID, S., COSTA, D.E., ABDALKAREEM, R., SHIHAB, E., SAIED, M.A., and ADAMS, B. (2022). <a
-                    href="http://das.encs.concordia.ca/Mujahid_TEM2021.pdf">Toward Using Package Centrality
+                    href="https://arxiv.org/abs/2107.10168">Toward Using Package
+                    Centrality
                     Trend to Identify Packages in Decline</a>, Transactions on Engineering Management (TEM), 69(6), p.
                 3618-3632, IEEE.&nbsp;<a href="publications/2022/tem.bib"><i>BibTeX</i></a></li>
             <li>CHOWDHURY, M.A.R., ABDALKAREEM, R., SHIHAB, E. and ADAMS, B. (2022). <a
@@ -709,7 +710,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             </li>
             <li>
                 GERMAN, D. M., ADAMS, B. and HASSAN, A. E. (2016). <a
-                    href="http://turingmachine.org/2015/linuxGit/emseLinuxGit.pdf">Continuously Mining the Use of
+                    href="https://sail.cs.queensu.ca/data/pdfs/2016_ContinuouslyMiningDistributedVersionControlSystems_AnEmpiricalStudyOfHowLinuxUsesGit.pdf">Continuously
+                    Mining the Use of
                     Distributed Version Control Systems: An empirical study of how Linux uses git</a>, Empirical
                 Software Engineering, 21 (1), pages 260-299, Springer.&nbsp;<a
                     href="publications/2016/emse_daniel.bib"><i>BibTeX</i></a>
@@ -1110,7 +1112,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <ul>
             <li>
                 SHIHAB, E., KAMEI, Y., ADAMS, B. and HASSAN, A. E. (2013). <a
-                    href="http://www.se.rit.edu/~emad/pubs/Shihab_IST2013.pdf">Is lines of code a good measure of effort
+                    href="https://das.encs.concordia.ca/pdf/Shihab_IST2013.pdf">Is
+                    lines of code a good measure of effort
                     in effort-aware models?</a>, Information and Software Technology, 55 (11), pages 1981-1993,
                 Elsevier.&nbsp;<a href="publications/2013/ist_emad.bib"><i>BibTeX</i></a>
             </li>
@@ -1123,7 +1126,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             </li>
             <li>
                 KAMEI, Y., SHIHAB, E., ADAMS, B., HASSAN, A. E., MOCKUS, A., SINHA, A. and UBAYASHI, N. (2013). <a
-                    href="http://www.se.rit.edu/~emad/pubs/Kamei_TSE2013.pdf">A Large-Scale Empirical Study of
+                    href="https://das.encs.concordia.ca/pdf/Kamei_TSE2013.pdf">A
+                    Large-Scale Empirical Study of
                     Just-In-Time Quality Assurance</a>, Transactions on Software Engineering (TSE), 39 (6), pages
                 757-773, IEEE.&nbsp;<a href="publications/2013/tseyasu.bib"><i>BibTeX</i></a>
             </li>
@@ -1245,7 +1249,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     name="icsm12_roman" href="publications/2012/icsm_roman.bib"><i>BibTeX</i></a>
             </li>
             <li>SHIHAB, E., ADAMS, B., HASSAN, A. E. and JIANG, Z. M. (2012). <a name="fse12"
-                    href="http://www.se.rit.edu/~emad/pubs/Shihab_FSE2012_.pdf">An Industrial Study on the Risk of
+                    href="https://das.encs.concordia.ca/pdf/Shihab_FSE2012.pdf">An
+                    Industrial Study on the Risk of
                     Software Changes</a>, in Proceedings of the ACM SIGSOFT 20th International Symposium on the
                 Foundations of Software Engineering, FSE (Research Triangle Park, NC, US), pages 62:1-62:11. (Acceptance
                 ratio: 32/201=17%)&nbsp;<a href="publications/2012/fse12.bib"><i>BibTeX</i></a></li>
@@ -1599,7 +1604,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             </li>
             <li>
                 ADAMS, B., DE SCHUTTER, K., ZAIDMAN, A., DEMEYER, S., TROMP, H. and DE MEUTER, W. (2009). <a
-                    href="http://www.st.ewi.tudelft.nl/~zaidman/publications/badamsJSS2009.pdf">Using Aspect Orientation
+                    href="https://repository.tudelft.nl/file/File_6062302e-6de3-4436-9dbe-2689bf9f0097">Using
+                    Aspect Orientation
                     in Legacy Environments for Reverse Engineering using Dynamic Analysis - An Industrial Experience
                     Report</a>, Journal of Software and Systems (JSS), 82 (4), pages 668-684, ISSN: 0164-1212,
                 Elsevier.&nbsp;<a href="publications/2009/jss09.bib"><i>BibTeX</i></a>
