--- a/publications.html
+++ b/publications.html
@@ -87,6 +87,9 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <h3>Journal</h3>
         <ul>
         <li>
+            YASMIN, J., WANG, J., TIAN, Y., and ADAMS, B. (2022). <a href="https://arxiv.org/abs/2406.00180">An
+                Empirical Study of Developers' Challenges in Implementing Workflows as Code: A Case Study on Apache Airflow</a>, Journal of Software and Systems (JSS), Elsevier, to appear.&nbsp;<a href="publications/2024/jss_airflow.bib"><i>BibTeX</i></a></li>
+        <li>
             PATEL, H., BOUCHER, D., FALLAHZADEH, E., HASSAN, A.E. and ADAMS, B. (2024). <a
                 href="publications/2024/ieeesw-harsh.pdf">A State-of-the-practice Release-readiness
                 Checklist for Generative AI-based Software Products</a>, IEEE Software, IEEE,
