--- a/publications.html
+++ b/publications.html
@@ -106,7 +106,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                 <li>PATEL, H., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_harsh.pdf">Post Deployment Recycling
                         of Machine Learning Models - Don't Throw Away Your Old Models!</a>, Empirical Software
                     Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_harsh.bib"><i>BibTeX</i></a></li>
-                <li>EBRAHIMI, E., ADAMS, B., OLIVA, G.A. and HASSAN, A.E. (2024). <a
+                <li>EBRAHIMI, A., ADAMS, B., OLIVA, G.A. and HASSAN, A.E. (2024). <a
                         href="https://sail.cs.queensu.ca/data/pdfs/2024_A_Large-Scale_Exploratory_Study_on_the_Proxy_Pattern_in_Ethereum.pdf">A
                 Large-Scale Exploratory Study on the Proxy Pattern in Ethereum</a>, Empirical Software
             Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_amir_proxy.bib"><i>BibTeX</i></a></li>
