Updating CISC-834 papers and formatting.

--- a/cisc834.html
+++ b/cisc834.html
@@ -29,7 +29,7 @@ title: CISC 834, DevOps and Release Engineering
 
     <div class="content">
 
-        <h1><a name="intro"><b>CISC 834</b> Topics in Computer Science: DevOps and Release Engineering</a></h1><br />
+        <h1><a name="intro"><b>CISC 834</b> Topics in Computer Science: MLOps and Release Engineering</a></h1><br />
 
         <p>CISC 834 is a grad course given each Fall by <a href="http://mcis.cs.queensu.ca/~bram/">Dr. Bram Adams</a>.
             It aims to introduce graduate students to the wonderful, yet challenging world of <a
@@ -67,9 +67,81 @@ title: CISC 834, DevOps and Release Engineering
 
         <br /><br />
         <h3><a name="success">Successful Projects</a></h3>
-        <p>The following conference papers started as an assignment or project in CISC 834, keep an eye on this section
+        <p>The following conference and journal papers started as an assignment or project in CISC 834, keep an eye on this section
             for more ;-)</p><br />
         <ul>
+            <li>
+                YASMIN, J., WANG, J., TIAN, Y., and ADAMS, B. (2022). <a href="https://arxiv.org/abs/2406.00180">An
+                    Empirical Study of Developers' Challenges in Implementing Workflows as Code: A Case Study on Apache
+                    Airflow</a>,
+                Journal of Software and Systems (JSS), Elsevier, to appear.&nbsp;<a
+                    href="publications/2024/jss_airflow.bib"><i>BibTeX</i></a></li>
+            <li>ZHENG, S., ADAMS, B. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2405.00796">Does Using
+                    Bazel Help Speed
+                    Up Continuous Integration Builds?</a>, Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_shenyu.bib"><i>BibTeX</i></a>
+            </li>
+            <li>OUATITI, Y.E., SAYAGH, M., KERZAZI, N., ADAMS, B. and HASSAN, A.E. (2024). <a
+                    href="https://sail.cs.queensu.ca/data/pdfs/2024_The_Impact_of_Concept_Drift_and_Data_leakage_on_Log_Level_Prediction_Models.pdf">The
+                    impact of Concept drift and Data leakage on Log Level Prediction
+                    Models</a>, Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_youssef.bib"><i>BibTeX</i></a>
+            </li>
+            <li>PATEL, H., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_harsh.pdf">Post Deployment
+                    Recycling
+                    of Machine Learning Models - Don't Throw Away Your Old Models!</a>, Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_harsh.bib"><i>BibTeX</i></a></li>
+            <li>ZHAO, Z., CHEN, Y., BANGASH, A.A., ADAMS, B. and HASSAN, A.E. (2024). <a
+                    href="https://arxiv.org/abs/2402.15990">An
+                    Empirical Study of Challenges in Machine Learning Asset
+                    Management</a>, Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a
+                    href="publications/2024/emse_jimmy_challenges.bib"><i>BibTeX</i></a></li>
+            <li>KAMATH, D.M., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2024). <a
+                    href="publications/2024/emse_divya_timeout.pdf">On Combining Commit Grouping and Build Skip
+                    Prediction to Reduce
+                    Redundant Continuous Integration Activity</a>, Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a
+                    href="publications/2024/emse_divya_timeout.bib"><i>BibTeX</i></a></li>
+            <li>MALIK, A., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_akshat_within.pdf">Towards
+                    Graph-Anonymization of Software Analytics Data: Empirical Study on JIT Defect Prediction</a>,
+                Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a
+                    href="publications/2024/emse_akshat_within.bib"><i>BibTeX</i></a></li>
+            <li>
+                OREAMUNO, E.L., KHAN, R.F., BANGASH, A.A., STINSON, C. and ADAMS, B. (2024). <a
+                    href="publications/2024/ieeesw-ernesto.pdf">The
+                    State of Documentation Practices of Third-party Machine Learning Models and Datasets</a>, IEEE
+                Software, IEEE,
+                to appear.&nbsp;<a href="publications/2024/ieeesw-ernesto.bib"><i>BibTeX</i></a>
+            </li>
+            <li>BAJAJ, R., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2023). <a
+                    href="publications/2023/emse_rahul.pdf">Unreproducible builds: Time to fix, causes, and correlation
+                    with
+                    external ecosystem factors
+                </a>, Empirical Software Engineering, 29(11), Springer.&nbsp;<a
+                    href="publications/2023/emse_rahul.bib"><i>BibTeX</i></a></li>
+            <li>CHEN, Y., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2023). <a
+                    href="publications/2023/emse_yihao.pdf">On
+                    practitioners' concerns when adopting
+                    service mesh frameworks
+                </a>, Empirical Software Engineering, 28(5), Springer.&nbsp;<a
+                    href="publications/2023/emse_yihao.bib"><i>BibTeX</i></a></li>
+            <li>ALFADEL, M., COSTA, D.E., SHIHAB, E. and ADAMS, B. (2023). <a
+                    href="https://das.encs.concordia.ca/pdf/Alfadel_TOSEM2022.pdf">On the Discoverability of npm
+                    Vulnerabilities in
+                    Node. js Projects</a>,
+                Transactions on Software
+                Engineering and Methodology (TOSEM), 32(4), p. 1-27, ACM.&nbsp;<a
+                    href="publications/2023/tosem_mahmoud.bib"><i>BibTeX</i></a></li>
+            <li>
+                HASAN, K., MACEDO, M., TIAN, Y., ADAMS, B. and DING, S. (2023). <a
+                    href="https://arxiv.org/abs/2304.08426">Understanding the Time to First Response In GitHub Pull
+                    Requests</a>, in
+                Proceedings of the 20th International Conference on Mining Software
+                Repositories, MSR (Melbourne, Australia), p. 1--11. (Acceptance ratio: 43/115=37.4%)&nbsp;<a
+                    href="publications/2023/msr_kazi.bib"><i>BibTeX</i></a>
+            </li>
             <li>ROMBAUT, B., COGO, F., ADAMS, B. and HASSAN, A.E. (2022). <a hname="greenkeeper">Lessons learned from
                     exploring the overhead introduced by the Greenkeeper dependency bot</a>, Transactions on Software
                 Engineering and Methodology (TOSEM), ACM, to appear.&nbsp;<a
@@ -87,6 +159,12 @@ title: CISC 834, DevOps and Release Engineering
                     Untriviality of Trivial Packages: An Empirical Study of npm JavaScript Packages</a>, Transactions on
                 Software Engineering (TSE), IEEE, to appear.&nbsp;<a
                     href="publications/2021/tse_atique.bib"><i>BibTeX</i></a></li>
+            <li>VYSALI, S., MCINTOSH, S. and ADAMS, B. (2022). <a
+                    href="https://rebels.cs.uwaterloo.ca/papers/tse2020_vysali.pdf">Quantifying,
+                    Characterizing, and Mitigating Flakily Covered Program Elements</a>, Transactions on Software
+                Engineering (TSE), 48(3), p. 1018-1029, IEEE.&nbsp;<a
+                    href="publications/2022/tse_shiva.bib"><i>BibTeX</i></a>
+            </li>
             <li>BARRAK, A., EGHAN, E.E., ADAMS, B., and KHOMH, F. (2021). <a href="publications/2021/jss_amine.pdf">Why
                     do Builds Fail? - A Conceptual Replication Study</a>, Journal of Software and Systems (JSS), Vol.
                 177, p. 110939, Elsevier.&nbsp;<a href="publications/2021/jss_amine.bib"><i>BibTeX</i></a></li>
