--- a/publications.html
+++ b/publications.html
@@ -86,49 +86,62 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Journal</h3>
         <ul>
-        <li>
-            YASMIN, J., WANG, J., TIAN, Y., and ADAMS, B. (2022). <a href="https://arxiv.org/abs/2406.00180">An
-                Empirical Study of Developers' Challenges in Implementing Workflows as Code: A Case Study on Apache Airflow</a>, Journal of Software and Systems (JSS), Elsevier, to appear.&nbsp;<a href="publications/2024/jss_airflow.bib"><i>BibTeX</i></a></li>
-        <li>
-            PATEL, H., BOUCHER, D., FALLAHZADEH, E., HASSAN, A.E. and ADAMS, B. (2024). <a
-                href="publications/2024/ieeesw-harsh.pdf">A State-of-the-practice Release-readiness
-                Checklist for Generative AI-based Software Products</a>, IEEE Software, IEEE,
-            to appear.&nbsp;<a href="publications/2024/ieeesw-harsh.bib"><i>BibTeX</i></a>
-        </li>
-        <li>ZHENG, S., ADAMS, B. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2405.00796">Does Using Bazel Help Speed
-                Up Continuous Integration Builds?</a>, Empirical Software
-            Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_shenyu.bib"><i>BibTeX</i></a></li>
-        <li>OUATITI, Y.E., SAYAGH, M., KERZAZI, N., ADAMS, B. and HASSAN, A.E. (2024). <a
-                href="https://sail.cs.queensu.ca/data/pdfs/2024_The_Impact_of_Concept_Drift_and_Data_leakage_on_Log_Level_Prediction_Models.pdf">The
-                impact of Concept drift and Data leakage on Log Level Prediction
-                Models</a>, Empirical Software
-                    Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_youssef.bib"><i>BibTeX</i></a></li>
-                <li>PATEL, H., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_harsh.pdf">Post Deployment Recycling
-                        of Machine Learning Models - Don't Throw Away Your Old Models!</a>, Empirical Software
-                    Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_harsh.bib"><i>BibTeX</i></a></li>
-                <li>EBRAHIMI, A., ADAMS, B., OLIVA, G.A. and HASSAN, A.E. (2024). <a
-                        href="https://sail.cs.queensu.ca/data/pdfs/2024_A_Large-Scale_Exploratory_Study_on_the_Proxy_Pattern_in_Ethereum.pdf">A
-                Large-Scale Exploratory Study on the Proxy Pattern in Ethereum</a>, Empirical Software
-            Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_amir_proxy.bib"><i>BibTeX</i></a></li>
-        <li>ZHAO, Z., CHEN, Y., BANGASH, A.A., ADAMS, B. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2402.15990">An
-                Empirical Study of Challenges in Machine Learning Asset
-                Management</a>, Empirical Software
-          Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_jimmy_challenges.bib"><i>BibTeX</i></a></li>
-        <li>KAMATH, D.M., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2024). <a
-                href="publications/2024/emse_divya_timeout.pdf">On Combining Commit Grouping and Build Skip Prediction to Reduce
-                Redundant Continuous Integration Activity</a>, Empirical Software
-            Engineering, Springer, to appear.&nbsp;<a
-                href="publications/2024/emse_divya_timeout.bib"><i>BibTeX</i></a></li>
-        <li>MALIK, A., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_akshat_within.pdf">Towards
-                Graph-Anonymization of Software Analytics Data: Empirical Study on JIT Defect Prediction</a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a
-                href="publications/2024/emse_akshat_within.bib"><i>BibTeX</i></a></li>
-        <li>
+            <li>
+                YASMIN, J., WANG, J., TIAN, Y., and ADAMS, B. (2022). <a href="https://arxiv.org/abs/2406.00180">An
+                    Empirical Study of Developers' Challenges in Implementing Workflows as Code: A Case Study on Apache
+                    Airflow</a>, Journal of Software and Systems (JSS), Elsevier, to appear.&nbsp;<a
+                    href="publications/2024/jss_airflow.bib"><i>BibTeX</i></a></li>
+            <li>
+                PATEL, H., BOUCHER, D., FALLAHZADEH, E., HASSAN, A.E. and ADAMS, B. (2024). <a
+                    href="publications/2024/ieeesw-harsh.pdf">A State-of-the-practice Release-readiness
+                    Checklist for Generative AI-based Software Products</a>, IEEE Software, IEEE,
+                to appear.&nbsp;<a href="publications/2024/ieeesw-harsh.bib"><i>BibTeX</i></a>
+            </li>
+            <li>ZHENG, S., ADAMS, B. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2405.00796">Does Using
+                    Bazel Help Speed
+                    Up Continuous Integration Builds?</a>, Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_shenyu.bib"><i>BibTeX</i></a>
+            </li>
+            <li>OUATITI, Y.E., SAYAGH, M., KERZAZI, N., ADAMS, B. and HASSAN, A.E. (2024). <a
+                    href="https://sail.cs.queensu.ca/data/pdfs/2024_The_Impact_of_Concept_Drift_and_Data_leakage_on_Log_Level_Prediction_Models.pdf">The
+                    impact of Concept drift and Data leakage on Log Level Prediction
+                    Models</a>, Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_youssef.bib"><i>BibTeX</i></a>
+            </li>
+            <li>PATEL, H., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_harsh.pdf">Post Deployment
+                    Recycling
+                    of Machine Learning Models - Don't Throw Away Your Old Models!</a>, Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_harsh.bib"><i>BibTeX</i></a></li>
+            <li>EBRAHIMI, A., ADAMS, B., OLIVA, G.A. and HASSAN, A.E. (2024). <a
+                    href="https://sail.cs.queensu.ca/data/pdfs/2024_A_Large-Scale_Exploratory_Study_on_the_Proxy_Pattern_in_Ethereum.pdf">A
+                    Large-Scale Exploratory Study on the Proxy Pattern in Ethereum</a>, Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_amir_proxy.bib"><i>BibTeX</i></a>
+            </li>
+            <li>ZHAO, Z., CHEN, Y., BANGASH, A.A., ADAMS, B. and HASSAN, A.E. (2024). <a
+                    href="https://arxiv.org/abs/2402.15990">An
+                    Empirical Study of Challenges in Machine Learning Asset
+                    Management</a>, Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a
+                    href="publications/2024/emse_jimmy_challenges.bib"><i>BibTeX</i></a></li>
+            <li>KAMATH, D.M., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2024). <a
+                    href="publications/2024/emse_divya_timeout.pdf">On Combining Commit Grouping and Build Skip
+                    Prediction to Reduce
+                    Redundant Continuous Integration Activity</a>, Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a
+                    href="publications/2024/emse_divya_timeout.bib"><i>BibTeX</i></a></li>
+            <li>MALIK, A., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_akshat_within.pdf">Towards
+                    Graph-Anonymization of Software Analytics Data: Empirical Study on JIT Defect Prediction</a>,
+                Empirical Software Engineering, Springer, to appear.&nbsp;<a
+                    href="publications/2024/emse_akshat_within.bib"><i>BibTeX</i></a></li>
+            <li>
                 OREAMUNO, E.L., KHAN, R.F., BANGASH, A.A., STINSON, C. and ADAMS, B. (2024). <a
                     href="publications/2024/ieeesw-ernesto.pdf">The
-                    State of Documentation Practices of Third-party Machine Learning Models and Datasets</a>, IEEE Software, IEEE,
+                    State of Documentation Practices of Third-party Machine Learning Models and Datasets</a>, IEEE
+                Software, IEEE,
                 to appear.&nbsp;<a href="publications/2024/ieeesw-ernesto.bib"><i>BibTeX</i></a>
             </li>
-            <li>LIN, J., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_justina_cna.pdf">On the Coordination of
+            <li>LIN, J., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_justina_cna.pdf">On the
+                    Coordination of
                     Vulnerability Fixes - An Empirical Study of Practices from 13 CVE Numbering
                     Authorities
                 </a>, Empirical Software Engineering, Springer, to appear.&nbsp;<a
@@ -137,44 +150,49 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     Social
                     Coding Platforms</a>, Journal of Software: Evolution and Process (JSEP), Wiley, to appear.&nbsp;<a
                     href="publications/2024/jsep_maleknaz.bib"><i>BibTeX</i></a></li>
-            
-            </ul>
+
+        </ul>
         <br />
         <h3>Conference</h3>
         <ul>
-        <li>
-            OLEWICKI, D., HABCHI, S. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2404.10703">An empirical study on code
-                review activity prediction and its impact in practice</a>, in Proceedings of the ACM
-            on Software Engineering (PACMSE), Issue FSE 2024 (Porto de Galinhas, Brazil), to appear. (Acceptance
-            ratio: 121/483=25.1%)&nbsp;<a href="publications/2024/fse.bib"><i>BibTeX</i></a>
-        </li>
-        <li>
-            OLEWICKI, D., HABCHI, S., NAYROLLES, M., FARAMARZI, M., CHANDAR, S. and ADAMS, B. (2024). <a
-                href="https://arxiv.org/abs/2305.09824">On the Costs and Benefits of Adopting Lifelong Learning for Software
-                Analytics: Empirical Study
-                on Brown Build and Risk Prediction</a>, in Proceedings of the Software Engineering In Practice (SEIP) track at
-            the 46th
-            International Conference on Software Engineering, ICSE (Lisbon, Portugal), to appear. (Acceptance
-            ratio: 45/120=37.5%)&nbsp;<span style="color: black; font-weight: bold">(Distinguished Paper
-                Award)</span><a href="publications/2024/seip.bib"><i>BibTeX</i></a>
+            <li>
+                OLEWICKI, D., HABCHI, S. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2404.10703">An empirical
+                    study on code
+                    review activity prediction and its impact in practice</a>, in Proceedings of the ACM
+                on Software Engineering (PACMSE), Issue FSE 2024 (Porto de Galinhas, Brazil), to appear. (Acceptance
+                ratio: 121/483=25.1%)&nbsp;<a href="publications/2024/fse.bib"><i>BibTeX</i></a>
             </li>
-            <li>MACEDO, M., TIAN, Y., COGO, F. and ADAMS, B. (2024). <a href="https://arxiv.org/abs/2403.17214">Exploring the Impact
+            <li>
+                OLEWICKI, D., HABCHI, S., NAYROLLES, M., FARAMARZI, M., CHANDAR, S. and ADAMS, B. (2024). <a
+                    href="https://arxiv.org/abs/2305.09824">On the Costs and Benefits of Adopting Lifelong Learning for
+                    Software
+                    Analytics: Empirical Study
+                    on Brown Build and Risk Prediction</a>, in Proceedings of the Software Engineering In Practice
+                (SEIP) track at
+                the 46th
+                International Conference on Software Engineering, ICSE (Lisbon, Portugal), to appear. (Acceptance
+                ratio: 45/120=37.5%)&nbsp;<span style="color: black; font-weight: bold">(Distinguished Paper
+                    Award)</span><a href="publications/2024/seip.bib"><i>BibTeX</i></a>
+            </li>
+            <li>MACEDO, M., TIAN, Y., COGO, F. and ADAMS, B. (2024). <a
+                    href="https://arxiv.org/abs/2403.17214">Exploring the Impact
                     of the Output Format on
-                    the Evaluation of Large Language Models for Code Translation</a>, in Proceedings of the 2024 Special Event of AI
+                    the Evaluation of Large Language Models for Code Translation</a>, in Proceedings of the 2024 Special
+                Event of AI
                 Foundation Models and Software Engineering (FORGE), to appear. (Acceptance ratio: 8/16=50%)&nbsp;<a
                     href="publications/2024/forge.bib"><i>BibTeX</i></a></a>&nbsp;<span
                     style="color: black; font-weight: bold">(Best Paper Award)</span></li>
         </ul>
-            <br /><br /><br /><br />
+        <br /><br /><br /><br />
     </div>
-    
+
     <div class="content">
         <h2><a name="2023"></a>2023</h2>
         <br />
         <h3>Journal</h3>
         <ul>
-                    <li>BAJAJ, R., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2023). <a
-                            href="publications/2023/emse_rahul.pdf">Unreproducible builds: Time to fix, causes, and correlation
+            <li>BAJAJ, R., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2023). <a
+                    href="publications/2023/emse_rahul.pdf">Unreproducible builds: Time to fix, causes, and correlation
                     with
                     external ecosystem factors
                 </a>, Empirical Software Engineering, 29(11), Springer.&nbsp;<a
@@ -182,7 +200,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             <li>FOUNDJEM, A., EGHAN, E.E. and ADAMS, B. (2023). <a href="publications/2023/tse_armstrong.pdf">A Grounded
                     Theory of Cross-community SECOs: Feedback
                     Diversity vs. Synchronization</a>, Transactions on Software Engineering
-                (TSE), 49(10), p.4731-4750, IEEE.&nbsp;<a href="publications/2023/tse_armstrong.bib"><i>BibTeX</i></a></li>
+                (TSE), 49(10), p.4731-4750, IEEE.&nbsp;<a href="publications/2023/tse_armstrong.bib"><i>BibTeX</i></a>
+            </li>
             <li>CHEN, Y., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2023). <a
                     href="publications/2023/emse_yihao.pdf">On practitioners' concerns when adopting
                     service mesh frameworks
@@ -231,8 +250,9 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
         <br />
         <h3>Other</h3>
         <ul>
-          <li>ADAMS, B. (2023). <a href="https://link.springer.com/content/pdf/bfm:978-3-031-36060-2/1?pdf=chapter%20toc">Foreword</a>
-                    of Software Ecosystems: Tooling and Analytics, edited by Tom Mens, Coen De
+            <li>ADAMS, B. (2023). <a
+                    href="https://link.springer.com/content/pdf/bfm:978-3-031-36060-2/1?pdf=chapter%20toc">Foreword</a>
+                of Software Ecosystems: Tooling and Analytics, edited by Tom Mens, Coen De
                 Roover and Anthony Cleve, 1st ed., p. vii-ix, Springer</li>
         </ul>
         <br /><br /><br /><br />
@@ -618,8 +638,9 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
             <li>
                 SAYAGH, M., KERZAZI, N. and ADAMS, B. (2017). <a href="publications/2017/icse.pdf">On Cross-stack
                     Configuration Errors</a>, in Proceedings of the 39th International Conference on Software
-              Engineering, ICSE (Buenos Aires, Argentina), pages 255-265. [<a href="publications/2017/icse2017_data.zip">replication package</a>] (Acceptance ratio: 68/398=17%)&nbsp;<a
-                    href="publications/2017/icse.bib"><i>BibTeX</i></a>
+                Engineering, ICSE (Buenos Aires, Argentina), pages 255-265. [<a
+                    href="publications/2017/icse2017_data.zip">replication package</a>] (Acceptance ratio:
+                68/398=17%)&nbsp;<a href="publications/2017/icse.bib"><i>BibTeX</i></a>
             </li>
             <li>
                 ZOLFAGHARINIA, M., ADAMS, B. and GU&Eacute;H&Eacute;NEUC, Y.-G. (2017). <a
