Updating course description.

--- a/cisc834.html
+++ b/cisc834.html
@@ -33,33 +33,57 @@ title: CISC 834, DevOps and Release Engineering
 
         <p>CISC 834 is a grad course given each Fall by <a href="http://mcis.cs.queensu.ca/~bram/">Dr. Bram Adams</a>.
             It aims to introduce graduate students to the wonderful, yet challenging world of <a
-                href="http://en.wikipedia.org/wiki/Release_engineering">software release engineering</a>. Software
-            release engineering is the discipline of integrating, building, testing, deploying and releasing qualitative
-            software releases to the end user. These activities form a vital link in today's <a
-                href="https://en.wikipedia.org/wiki/DevOps">DevOps</a> world!</p><br />
+                href="http://en.wikipedia.org/wiki/Release_engineering">software release
+                engineering</a>,
+            DevOps and MLOps. Software release engineering is the discipline of integrating, building, testing,
+            deploying and
+            releasing high-quality software releases to the end user. These activities form a vital link in today's
+            DevOps
+            world,
+            which builds on agile development processes to add a feedback loop between developers and operators. The
+            advent of
+            revolutionary AI technology has pushed the established concepts of <a
+                href="https://en.wikipedia.org/wiki/DevOps">
+                DevOps</a> even further, leading to the recent fields of
+            <a href="https://en.wikipedia.org/wiki/MLOps">MLOps</a> or even LLMOps.
+        </p><br />
 
         <p>While many people still think of software as cardboard boxes bought in their local electronics shop, the
-            advent of agile methodologies and the web has changed the landscape drastically. Deployment of modern
-            applications often includes coordinating the release of applications on multiple mobile platforms, web
-            platforms with centralized backend services, app stores, and native desktop clients. Furthermore, concepts
-            like continuous delivery of software are no longer curiosities, but essential to retain a competitive edge.
-            Did you know that lean start-ups like <a href="http://www.imvu.com/">IMVU</a> release up to 50 times <b>per
+            advent of
+            agile
+            methodologies, the web and AI has changed the landscape drastically. Deployment of modern applications often
+            includes
+            coordinating the release of applications on multiple mobile platforms, web platforms with centralized
+            backend
+            services,
+            app stores, and native desktop clients. Furthermore, concepts like continuous delivery of software are no
+            longer
+            curiosities, but essential to retain a competitive edge. Did you know that lean start-ups like <a
+                href="http://www.imvu.com/">IMVU</a> release up to 50 times <b>per
                 day</b>, while modern companies like <a
                 href="http://www.intuit.ca/intuit-products/index.jsp">Intuit</a>, <a
                 href="http://www.google.ca">Google</a> and <a href="http://www.mozilla.org/en-US/">Mozilla</a> only take
             a couple of weeks in between releases? Browsers like <a
-                href="https://www.google.com/intl/en/chrome/browser/">Google Chrome</a> and <a
-                href="http://www.mozilla.org/en-US/firefox/new/">Mozilla Firefox</a> even update silently to new
-            releases, without the user noticing it.</p><br />
-
-        <p>But how can a software organization achieve such a highly performant release engineering process? How can
-            delays and inefficiencies be identified and monitored, and how can they be resolved? As a methodology
-            towards dealing with these questions, this course promotes the usage of techniques from the area of <a
-                href="http://msrconf.org">mining software repositories</a>. This area leverages a wide range of readily
-            available databases such as version control repositories, bug repositories, mailing lists and other data
-            gathered during or following the development process, in order to extract actionable data that can help
-            stakeholders like release engineers or gatekeepers to improve integration or to make the right decision.</p>
+                href="https://www.google.com/intl/en/chrome/browser/">Google
+                Chrome</a> and <a href="http://www.mozilla.org/en-US/firefox/new/">Mozilla Firefox</a> even update
+            silently to
+            new
+            releases, without the user noticing it. Similar notions are being developed for today's AI systems.</p>
         <br />
+
+        <p>How can a modern software organization achieve such a highly performant release engineering process? How can
+            delays
+            and
+            inefficiencies be identified and monitored, and how can they be resolved? As a methodology towards dealing
+            with
+            these
+            questions, this course relies on techniques from the area of <a href="http://msrconf.org">mining software
+                repositories</a>, which leverages a wide range
+            of readily available databases such as version control repositories, bug repositories, mailing lists and
+            other data
+            gathered during or following the development process, in order to extract actionable data that can help
+            stakeholders
+            like release engineers or gatekeepers to improve integration or to make the right decision.</p>
 
         <!--	     <br/><br/><h3><a name="description">Description of the Course</a></h3>
 	     <p>Software release engineering process: integration, build, staged tests, packaging and deployment. Release planning. Definition and basic concepts of mining software repositories. Different types of repositories: version control, bug repositories, mailing lists, project ecosystems and collaboration environments. Empirical techniques for repository mining: data mining, statistical analysis, natural language processing, source code analysis and qualitative analysis. Integration : configuration management, impact of branching patterns on software quality, integration patterns in large-scale software projects. Build: build maintenance and verification, software variability management. Staged tests: bug prediction, test reduction/minimization/selection and continuous quality assurance. Packaging: large-scale software distributions, code provenance and mobile applications. Deployment: deployment strategies, app stores and cloud computing.</p><br/>-->
@@ -67,7 +91,8 @@ title: CISC 834, DevOps and Release Engineering
 
         <br /><br />
         <h3><a name="success">Successful Projects</a></h3>
-        <p>The following conference and journal papers started as an assignment or project in CISC 834, keep an eye on this section
+        <p>The following conference and journal papers started as an assignment or project in CISC 834, keep an eye on
+            this section
             for more ;-)</p><br />
         <ul>
             <li>
