--- a/publications.html
+++ b/publications.html
@@ -449,7 +449,8 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     Code</a>, Empirical Software Engineering, Springer, 25, p. 4873-4926.&nbsp;<a
                     href="publications/2020/emse_parisa.bib"><i>BibTeX</i></a></li>
             <li>VARADHARAJAN, V.S., ST-ONGE, D., ADAMS, B. and BELTRAME, G. (2020). <a
-                    href="https://mistlab.ca/papers/SwarmRelays/Supplementary.pdf">Swarm Relays: Distributed
+                    href="http://www.arxiv.org/abs/1909.10496">Swarm Relays:
+                    Distributed
                     Self-Healing Ground-and-Air Connectivity Chains</a>, Robotics and Automation Letters, IEEE, 5 (4),
                 p. 5347-5354&nbsp;<a href="publications/2020/iros.bib"><i>BibTeX</i></a></li>
             <li>MAH&Eacute;, N., ADAMS, B., MARSAN, J., TEMPLIER, M. and BISSONNETTE, S. (2020). <a
