--- a/publications.html
+++ b/publications.html
@@ -171,8 +171,9 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                 (SEIP) track at
                 the 46th
                 International Conference on Software Engineering, ICSE (Lisbon, Portugal), to appear. (Acceptance
-                ratio: 45/120=37.5%)&nbsp;<span style="color: black; font-weight: bold">(Distinguished Paper
-                    Award)</span><a href="publications/2024/seip.bib"><i>BibTeX</i></a>
+                ratio: 45/120=37.5%)&nbsp;<a href="publications/2024/seip.bib"><i>BibTeX</i></a>&nbsp;<span
+                    style="color: black; font-weight: bold">(Distinguished Paper
+                    Award)</span>
             </li>
             <li>MACEDO, M., TIAN, Y., COGO, F. and ADAMS, B. (2024). <a
                     href="https://arxiv.org/abs/2403.17214">Exploring the Impact
@@ -180,7 +181,7 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     the Evaluation of Large Language Models for Code Translation</a>, in Proceedings of the 2024 Special
                 Event of AI
                 Foundation Models and Software Engineering (FORGE), to appear. (Acceptance ratio: 8/16=50%)&nbsp;<a
-                    href="publications/2024/forge.bib"><i>BibTeX</i></a></a>&nbsp;<span
+                    href="publications/2024/forge.bib"><i>BibTeX</i></a>&nbsp;<span
                     style="color: black; font-weight: bold">(Best Paper Award)</span></li>
         </ul>
         <br /><br /><br /><br />
