--- a/publications.html
+++ b/publications.html
@@ -102,11 +102,25 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     Up Continuous Integration Builds?</a>, Empirical Software
                 Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_shenyu.bib"><i>BibTeX</i></a>
             </li>
+            
             <li>OUATITI, Y.E., SAYAGH, M., KERZAZI, N., ADAMS, B. and HASSAN, A.E. (2024). <a
                     href="https://sail.cs.queensu.ca/data/pdfs/2024_The_Impact_of_Concept_Drift_and_Data_leakage_on_Log_Level_Prediction_Models.pdf">The
                     impact of Concept drift and Data leakage on Log Level Prediction
                     Models</a>, Empirical Software
                 Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_youssef.bib"><i>BibTeX</i></a>
+            </li>                                              
+            <li>KAMATH, D.M., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2024). <a
+                    href="publications/2024/emse_divya_timeout.pdf">On Combining Commit Grouping and Build Skip
+                    Prediction to Reduce
+                    Redundant Continuous Integration Activity</a>, Empirical Software
+                Engineering, Springer, to appear.&nbsp;<a
+                    href="publications/2024/emse_divya_timeout.bib"><i>BibTeX</i></a></li>            
+            <li>
+                OREAMUNO, E.L., KHAN, R.F., BANGASH, A.A., STINSON, C. and ADAMS, B. (2024). <a
+                    href="publications/2024/ieeesw-ernesto.pdf">The
+                    State of Documentation Practices of Third-party Machine Learning Models and Datasets</a>, IEEE
+                Software, IEEE,
+                to appear.&nbsp;<a href="publications/2024/ieeesw-ernesto.bib"><i>BibTeX</i></a>
             </li>
             <li>PATEL, H., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_harsh.pdf">Post Deployment
                     Recycling
@@ -117,29 +131,14 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     Large-Scale Exploratory Study on the Proxy Pattern in Ethereum</a>, Empirical Software
                 Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_amir_proxy.bib"><i>BibTeX</i></a>
             </li>
-            <li>ZHAO, Z., CHEN, Y., BANGASH, A.A., ADAMS, B. and HASSAN, A.E. (2024). <a
-                    href="https://arxiv.org/abs/2402.15990">An
+            <li>ZHAO, Z., CHEN, Y., BANGASH, A.A., ADAMS, B. and HASSAN, A.E. (2024). <a href="https://arxiv.org/abs/2402.15990">An
                     Empirical Study of Challenges in Machine Learning Asset
                     Management</a>, Empirical Software
-                Engineering, Springer, to appear.&nbsp;<a
-                    href="publications/2024/emse_jimmy_challenges.bib"><i>BibTeX</i></a></li>
-            <li>KAMATH, D.M., FERNANDES, E., ADAMS, B. and HASSAN, A.E. (2024). <a
-                    href="publications/2024/emse_divya_timeout.pdf">On Combining Commit Grouping and Build Skip
-                    Prediction to Reduce
-                    Redundant Continuous Integration Activity</a>, Empirical Software
-                Engineering, Springer, to appear.&nbsp;<a
-                    href="publications/2024/emse_divya_timeout.bib"><i>BibTeX</i></a></li>
+                Engineering, Springer, to appear.&nbsp;<a href="publications/2024/emse_jimmy_challenges.bib"><i>BibTeX</i></a></li>
             <li>MALIK, A., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_akshat_within.pdf">Towards
                     Graph-Anonymization of Software Analytics Data: Empirical Study on JIT Defect Prediction</a>,
                 Empirical Software Engineering, Springer, to appear.&nbsp;<a
                     href="publications/2024/emse_akshat_within.bib"><i>BibTeX</i></a></li>
-            <li>
-                OREAMUNO, E.L., KHAN, R.F., BANGASH, A.A., STINSON, C. and ADAMS, B. (2024). <a
-                    href="publications/2024/ieeesw-ernesto.pdf">The
-                    State of Documentation Practices of Third-party Machine Learning Models and Datasets</a>, IEEE
-                Software, IEEE,
-                to appear.&nbsp;<a href="publications/2024/ieeesw-ernesto.bib"><i>BibTeX</i></a>
-            </li>
             <li>LIN, J., ADAMS, B. and HASSAN, A.E. (2024). <a href="publications/2024/emse_justina_cna.pdf">On the
                     Coordination of
                     Vulnerability Fixes - An Empirical Study of Practices from 13 CVE Numbering
@@ -150,7 +149,6 @@ title: Research Results on Maintenance, Construction and Intelligence of Softwar
                     Social
                     Coding Platforms</a>, Journal of Software: Evolution and Process (JSEP), Wiley, to appear.&nbsp;<a
                     href="publications/2024/jsep_maleknaz.bib"><i>BibTeX</i></a></li>
-
         </ul>
         <br />
         <h3>Conference</h3>
